--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "moment": "^2.30.1",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5",
     "typescript": "^5.5.4"
